--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 server.port=8000
 spring.application.name=UserMS
 spring.datasource.password=Ishita#1234
+  
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+spring.datasource.url=jdbc:mysql://localhost/userdb
+
+product.uri=http:8100/products
