--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=UserMS
 spring.datasource.password=Ishita#1234
   
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.username=root
+spring.datasource.username=admin
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-spring.datasource.url=jdbc:mysql://localhost/userdb
+spring.datasource.url=jdbc:mysql://reskilluserdb.c1evoyb9zcpp.ap-south-1.rds.amazonaws.com:3306/userdb
 
 product.uri=http:8100/products
